# coffee-kpi-dashboard

./: .gitignore  README.md  doc-modelo-datos.md  main.py  pyproject.toml
database/: schema.sql  views.sql
doc/: doc-modelo-datos.md
modulos/ventas/create_sale/: api.py  repository.py  schemas.py  service.py
scripts/: seed_data.py  test_schema.py
shared/: database.py
